# nopibot_ui

./: .dockerignore  .gitignore  README.md  compose.yaml  deploy.sh  help  test_auto_mode_selection.py  test_mcp_integration.py
backend/: Dockerfile  kenopi_chatbot.py  kenopi_prompt.py  main.py  pyproject.toml  requirements.txt  sequential_thinking_mcp.py
backend/data/: kenopi_faq.csv
backend/routers/: kenopi.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/health/: route.ts
frontend/src/: Chatbot.tsx
